--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,7 @@
 
 title: Joe's Blog
 email: eyzuk3w62bkabww@163.com
-description: >- # this means to ignore newlines until "baseurl:"
-Thoughts and notes on Software Engineering, Electronics, and Blockchain. 
+description: Thoughts and notes on Software Engineering, Electronics, and Blockchain. 
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
